--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,10 @@
     transform: rotate(360deg);
   }
 }
+.card{
+  transition: all .3s ease-in-out;
+}
+.card:hover{
+    transform: scale(1.05);
+    z-index: 1;
+}
